# charybdis

./: .gitignore  HANDOFF.md  LEDGER.md  README.md  pyproject.toml
charybdis/: __init__.py  book.py  calendars.py  ffs3.py  forced_flow.py  forward_test.py  hl_rest.py  loaders.py  markout.py  run_study1.py  run_study2.py  run_study3_carry.py  run_study3_census.py  run_study3_clock.py  run_study3_funding_forced_flow.py  run_study3_spreads.py  study2.py  study3_carry.py  study3_census.py  study3_clock.py  study3_funding_forced_flow.py  study3_harvest.py  study3_mechanics.py  study3_spreads.py
charybdis/console/: backtests.py  candles.py  datasets.py  findings.py  findings.yaml  indicators.py  rawdata.py  server.py  study1.py  tables.py
console/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console/src/: App.tsx  api.ts  explain.tsx  index.css  theme.ts  ui.tsx
deploy/systemd/: charybdis-forward.service  (+1 more)
docs/: 2026-07-05-strategy-priors.md
notebooks/: 00_explore.ipynb  README.md
tests/: conftest.py  test_book.py  test_calendars.py  test_console_backtests.py  test_console_candles.py  test_console_datasets.py  test_console_findings_study1.py  test_console_indicators.py  test_console_rawdata.py  test_console_tables.py  test_ffs3.py  test_forced_flow.py  test_forward_test.py  test_hl_rest.py  test_loaders.py  test_markout.py  test_study2.py  test_study3_carry.py  test_study3_census.py  test_study3_clock.py  test_study3_funding_forced_flow.py  test_study3_harvest.py  test_study3_mechanics.py  test_study3_spreads.py
(+58 files in other folders)
