[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charybdis"
version = "0.1.0"
description = "Research tooling for historical market-data studies"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "exchange-calendars",
    "httpx",
    "polars",
    "pyarrow",
    "pytest",
    "zstandard",
]

[project.scripts]
charybdis-ffs3 = "charybdis.ffs3:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["charybdis"]
