[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charybdis"
version = "0.1.0"
description = "Research tooling for historical market-data studies"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "exchange-calendars",
    "fastapi",
    "httpx",
    "polars",
    "pyarrow",
    "pytest",
    "pyyaml",
    "uvicorn",
    "zstandard",
]

[project.scripts]
charybdis-console = "charybdis.console.server:main"
charybdis-ffs3 = "charybdis.ffs3:main"

[dependency-groups]
dev = [
    "ipykernel",
    "jupyterlab",
    "notebook-intelligence",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["charybdis"]
